--- a/AppPadaria/src/app/components/salgados/salgados.component.css
+++ b/AppPadaria/src/app/components/salgados/salgados.component.css
@@ -1,58 +1,65 @@
+/* estilos para o container geral */
 .container {
-    margin-top: 20px;
-  }
-  
-  .col-6 {
-    background-color: #f8f9fa; /* Cor de fundo */
-    border: 1px solid #ced4da; /* Cor da borda */
-    border-radius: 10px; /* Borda arredondada */
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra leve */
-  }
-  
-  h6 {
-    color: #007bff; /* Cor do texto do cabeçalho */
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  label {
-    font-weight: bold;
-  }
-  
-  input {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-    border: 1px solid #ced4da;
-    border-radius: 4px;
-  }
-  
-  button {
-    margin-top: 10px;
-  }
-  
-  /* Botão Salvar */
-  .btn-outline-secondary {
-    background-color: #f58220; 
-    color: #fff;
-    border: 1px solid #f58220;
-  }
-  
-  .btn-outline-secondary:hover {
-    background-color: #d45b1a; 
-    border: 1px solid #d45b1a;
-  }
-  
-  /* Botão Voltar */
-  .btn-light {
-    background-color: #007bff; 
-    border: 1px solid #007bff;
-  }
-  
-  .btn-light:hover {
-    background-color: #0056b3; 
-    border: 1px solid #0056b3;
-  }
+  margin-top: 20px;
+}
+
+/* estilos para a coluna */
+.col-6 {
+  background-color: #f8f9fa; 
+  border: 1px solid #ced4da; 
+  border-radius: 10px; 
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
+
+/* cor do h6 */
+h6 {
+  color: #007bff; 
+}
+
+/* margem inferior para grupo de formulário */
+.form-group {
+  margin-bottom: 20px;
+}
+
+/* espessura da font para o  rótulo de formulário */
+label {
+  font-weight: bold;
+}
+
+/* estilos para os campos de entrada do formulário */
+input {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+}
+
+/* margem superior do botão */
+button {
+  margin-top: 10px;
+}
+
+/* estilos para o botão salvar */
+.btn-outline-secondary {
+  background-color: #f58220; 
+  color: #fff;
+  border: 1px solid #f58220;
+}
+
+.btn-outline-secondary:hover {
+  background-color: #d45b1a; 
+  border: 1px solid #d45b1a;
+}
+
+/* estilos para o botão voltar */
+.btn-light {
+  background-color: #007bff; 
+  border: 1px solid #007bff;
+}
+
+.btn-light:hover {
+  background-color: #0056b3; 
+  border: 1px solid #0056b3;
+}
