--- a/AppPadaria/src/app/components/salgados/salgados.component.html
+++ b/AppPadaria/src/app/components/salgados/salgados.component.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class = "form-group">
                     <label>Preço Salgado</label>
-                    <input type="text" class="form-control form-control-sm" formControlName="precosalgado" />
+                    <input type="text" class="form-control form-control-sm" formControlName="preçosalgado" />
                 </div>
                 <div class="container">
                     <div class="row">
