Desenvolvimento de Software Visual - UP

--- a/AppPadaria/src/app/app.component.html
+++ b/AppPadaria/src/app/app.component.html
@@ -14,6 +14,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/clientes">Clientes</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/bebidas">Bebidas</a>
+      </li>
     </ul>
   </nav>
 
